feat(#91): InMemoryActorTrustScoreRepository